--- a/HustleFlow/contentview.ui
+++ b/HustleFlow/contentview.ui
@@ -14,8 +14,23 @@
    <string>ContentView</string>
   </property>
   <widget class="QWidget" name="centralwidget"/>
-  <widget class="QMenuBar" name="menubar"/>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QMenuBar" name="menubar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>800</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <widget class="QMenu" name="menuHustleFlow">
+    <property name="title">
+     <string>HustleFlow</string>
+    </property>
+   </widget>
+   <addaction name="menuHustleFlow"/>
+  </widget>
  </widget>
  <resources/>
  <connections/>
